--- a/GalytixExam/appsettings.json
+++ b/GalytixExam/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "PremiumDataPath": "./gwpByCountry.csv",
+  "Port": 9091
 }
